--- a/full-stack.html
+++ b/full-stack.html
@@ -42,7 +42,7 @@
 <p><span class="badge badge-light">Brighton, England</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://summitchangemakers.recruitee.com/o/senior-full-stack-developer'>
+<h5><a href='https://summitchangemakers.recruitee.com/o/senior-full-stack-developer'>
       Senior Full Stack Developer - Summit
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -60,7 +60,7 @@
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://velocity-cs.zohorecruit.com/recruit/ViewJob.na?digest=E1Gb754XvfEhlnVIRRkvG8DyJMHDHkPBk@V0b6tWWcw-&embedsource=CareerSite'>Full Stack Web Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://velocity-cs.zohorecruit.com/recruit/ViewJob.na?digest=E1Gb754XvfEhlnVIRRkvG8DyJMHDHkPBk@V0b6tWWcw-&embedsource=CareerSite'>Full Stack Web Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -80,7 +80,7 @@
 <p><span class="badge badge-light">Los Angeles, California  Redwood City, California  Los Angeles</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/DevIQ/743999698668046-sr-ruby-on-rails-software-developer-full-stack'>DevIQ Sr. Ruby on Rails Software Developer, Full-Stack | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DevIQ/743999698668046-sr-ruby-on-rails-software-developer-full-stack'>DevIQ Sr. Ruby on Rails Software Developer, Full-Stack | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -104,7 +104,7 @@
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sunshinesmile.join.com/jobs/448676-fullstack-engineer-php-m-f'>Job @ PlusDental (Berlin): Fullstack Engineer PHP ... | JOIN</a></h5> 
+<h5><a href='https://sunshinesmile.join.com/jobs/448676-fullstack-engineer-php-m-f'>Job @ PlusDental (Berlin): Fullstack Engineer PHP ... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany  Berlin</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -160,7 +160,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.php-resource.de/jobs/job,45578,Fullstackentwickler--Software-Entwickler--Programmierer-als-IT-Berater-mwd.htm'>Fullstackentwickler / Software-Entwickler / Programmierer als IT-Berater (m/w/d) Aktuelle PHP Stellenangebote und jobs  php-resource.de</a></h5> 
+<h5><a href='https://www.php-resource.de/jobs/job,45578,Fullstackentwickler--Software-Entwickler--Programmierer-als-IT-Berater-mwd.htm'>Fullstackentwickler / Software-Entwickler / Programmierer als IT-Berater (m/w/d) Aktuelle PHP Stellenangebote und jobs  php-resource.de</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -180,7 +180,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/discord/jobs/4501928002'>Job Application for Senior Software Engineer - Full-stack (Data Products) at Discord</a></h5> 
+<h5><a href='https://boards.greenhouse.io/discord/jobs/4501928002'>Job Application for Senior Software Engineer - Full-stack (Data Products) at Discord</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -225,7 +225,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://viatec.silkstart.com/jobs/full-stack-windows-developer'>
+<h5><a href='https://viatec.silkstart.com/jobs/full-stack-windows-developer'>
     Victoria Innovation, Advanced Technology &amp; Entrepreneurship Council 
     
     | Senior Full-Stack Windows Developer
@@ -250,7 +250,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/loandepot/job/oOFQafwd'>loanDepot Careers - Sr. Full Stack Software Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/loandepot/job/oOFQafwd'>loanDepot Careers - Sr. Full Stack Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -258,7 +258,7 @@
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://masglobalconsulting.applytojob.com/apply/fX1gfz6vVQ/Full-Stack-Developer-Lead'>Full Stack Developer Lead - MAS Global Consulting - Career Page</a></h5> 
+<h5><a href='http://masglobalconsulting.applytojob.com/apply/fX1gfz6vVQ/Full-Stack-Developer-Lead'>Full Stack Developer Lead - MAS Global Consulting - Career Page</a></h5> 
 <p><span class="badge badge-light">Tampa, FL Medellin, Colombia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -266,7 +266,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/brandwatch/job/oZisbfwE'>Brandwatch Careers - Full Stack Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/brandwatch/job/oZisbfwE'>Brandwatch Careers - Full Stack Developer</a></h5> 
 <p><span class="badge badge-light">Brighton, England</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -290,7 +290,7 @@
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://potentialpark.applytojob.com/apply/oXf6Lm3j7H/FullStack-Web-Developer'>Full-Stack Web Developer - Potentialpark - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://potentialpark.applytojob.com/apply/oXf6Lm3j7H/FullStack-Web-Developer'>Full-Stack Web Developer - Potentialpark - Career Page</a></h5> 
 <p><span class="badge badge-light">Stockholm Stockholm, Sweden</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -330,7 +330,7 @@
 <p><span class="badge badge-light">Chicago, Illinois  Chicago, IL</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qSnaVfw4&k=Job&j=oWXebfw2&__jvst=Employee&__jvsd=sulY9hwI&__jvsc=Twitter&bid=nb9kpMwk'>DNEG Careers - Full Stack Developer (IMS)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qSnaVfw4&k=Job&j=oWXebfw2&__jvst=Employee&__jvsd=sulY9hwI&__jvsc=Twitter&bid=nb9kpMwk'>DNEG Careers - Full Stack Developer (IMS)</a></h5> 
 <p><span class="badge badge-light">Mumbai Chennai, India  Mumbai</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -342,7 +342,7 @@
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://pickar.join.com/jobs/465932-intern-as-full-stack-developer'>Job @ pickar (Remote): Intern as Full-Stack Developer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pickar.join.com/jobs/465932-intern-as-full-stack-developer'>Job @ pickar (Remote): Intern as Full-Stack Developer | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -350,7 +350,7 @@
 <p><span class="badge badge-light">Jakarta, Indonesia</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/alation/6b72c778-4ec5-4cd6-a216-aff7d010cc4a'>Alation, Inc. - Full Stack Engineer: Customer Growth</a></h5> 
+<h5><a href='https://jobs.lever.co/alation/6b72c778-4ec5-4cd6-a216-aff7d010cc4a'>Alation, Inc. - Full Stack Engineer: Customer Growth</a></h5> 
 <p><span class="badge badge-light">Chennai, India  Berkeley</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -396,7 +396,7 @@
 <p><span class="badge badge-light">Auckland New Zealand  Auckland Auckland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=oSaOafwK&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=nfvbpMwB'>Cirrus Logic Careers - Full Stack Software Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=oSaOafwK&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=nfvbpMwB'>Cirrus Logic Careers - Full Stack Software Developer</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
